components/nginx-ingress/uksrc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uksrc-ral-staging-ingress
  namespace: jupyterhub
  annotations: 
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ral.uksrc.org
    secretName: uksrc-ral-tls
  rules:
  - host: ral-stage.uksrc.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterhub
            port:
              number: 80
